# multi-model-server

./: .coveragerc  .gitignore  .gitmodules  CNAME  MANIFEST.in  PyPiDescription.rst  README.md  build.sh  buildspec.yml  export_model.py  mxnet_model_server.py  pypi.md  run_ci_tests.sh  run_circleci_tests.py  setup.py  test.txt
.circleci/: README.md  config.yml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  benchmark.py  config_template.properties  install_dependencies.sh  lstm_ip.json
ci/: Dockerfile.python2.7  Dockerfile.python3.6  README.md  benchmark_ai.sh  buildspec-PRT.yml  buildspec-benchmark.yml  buildspec-nightly.yml  buildspec-smoke.yml  buildspec.yml
dms/: __init__.py  arg_parser.py  client_sdk_generator.py  deep_model_server.py  export_model.py  log.py  metric.py  metrics_manager.py  mxnet_model_server.py  service_manager.py  serving_frontend.py  storage.py
docker/: Dockerfile  Dockerfile.base.ubuntu_16_04.py2_7  Dockerfile.base.ubuntu_16_04.py2_7.nightly  Dockerfile.base.ubuntu_16_04.py3_6  Dockerfile.base.ubuntu_16_04.py3_6.nightly  Dockerfile.cpu  Dockerfile.cpu.base  Dockerfile.gpu  Dockerfile.gpu.base  Dockerfile.nightly-cpu  Dockerfile.nightly-gpu  README.md  advanced_settings.md  config.properties  dockerd-entrypoint.sh  install.sh  mms_app_cpu.conf  mms_app_gpu.conf  mxnet-model-server  mxnet-model-server.sh  (+4 more)
examples/tesnorflow_c_handler/bindings/: CMakeLists.txt  setup.py
examples/tesnorflow_c_handler/bindings/include/: Model.h  Tensor.h
examples/tesnorflow_c_handler/bindings/src/: Model.cpp  Tensor.cpp  tf_c_inference.cpp
(+829 files in other folders)
